<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlarmClock</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">ADD</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="day">Day</string>
    <string name="save">Save</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="select_date">Select Date</string>
    <string name="selected_date">Selected Date</string>
    <string name="date">Date</string>
    <string name="no_alarm_set_press_add_to_create_new_">No alarm set, Press ADD to create new.</string>
    <string name="snooz">Snooz</string>
    <string name="dismiss_">Dismiss!</string>

</resources>
